# wpe-manager

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh  wpe-manager.desktop
.github/workflows/: release.yml
packaging/: PUBLISHING.md
packaging/aur/: .SRCINFO  PKGBUILD
wpe_manager/: __init__.py  __main__.py  autopause.py  config.py  engine.py  gui.py  library.py  rotation.py  steam.py  theme.py
