[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wpe-manager"
version = "0.3.1"
description = "A fast, native GUI over linux-wallpaperengine with per-screen assignment and playlist rotation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.5"]
keywords = ["wallpaper", "wallpaper-engine", "linux-wallpaperengine", "kde", "wayland"]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
]

[project.urls]
Homepage = "https://github.com/Dragonir44/wpe-manager"

[project.gui-scripts]
wpe-manager = "wpe_manager.__main__:main"

[tool.setuptools]
packages = ["wpe_manager"]
