[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "wpe-manager"
dynamic = ["version"]
description = "A fast, native GUI over linux-wallpaperengine with per-screen assignment and playlist rotation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dragonir", email = "dragonir44@gmail.com" }]
dependencies = ["PySide6>=6.5"]
keywords = ["wallpaper", "wallpaper-engine", "linux-wallpaperengine", "kde", "wayland"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
]

[project.urls]
Homepage = "https://github.com/Dragonir44/wpe-manager"
Repository = "https://github.com/Dragonir44/wpe-manager"
Issues = "https://github.com/Dragonir44/wpe-manager/issues"

[project.gui-scripts]
wpe-manager = "wpe_manager.__main__:main"

[tool.setuptools]
packages = ["wpe_manager"]

[tool.setuptools.dynamic]
version = { attr = "wpe_manager.__version__" }
